# mkpdfs2-mkdocs-plugin

./: README.md  pyproject.toml  tox.ini
.github/workflows/: pylint.yml  python-package.yml
mkpdfs_mkdocs/: __init__.py  generator.py  mkpdfs.py  utils.py
mkpdfs_mkdocs/preprocessor/: __init__.py  prep.py
mkpdfs_mkdocs/preprocessor/links/: __init__.py  transform.py  util.py
